update 6-28 / 1926 / better looped calculator